--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/StudentProfiles.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/StudentProfiles.cshtml
@@ -90,9 +90,9 @@
                                     </td>
                                     <td class="text-center">@student.LastLoginTime?.ToString("g")</td>
                                     <td class="text-center">
-                                        <button type="button" class="btn btn-outline-primary btn-sm">
+                                        @* <button type="button" class="btn btn-outline-primary btn-sm">
                                             <i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
-                                        </button>
+                                        </button> *@
                                         <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteStudentModal" data-student-id="@student.Id">
                                             <i class="fa-solid fa-trash custom-icon"></i> Xóa
                                         </button>
