--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -1,10 +1,6 @@
-﻿@* @{
+﻿@{
     switch (ViewData["page"])
     {
-        case "Index":
-        case "LoginPage":
-            Layout = "_LoginLayout";
-            break;
         case "HomePage":
         case "SchoolYear":
         case "EndSemesterReport":
@@ -20,15 +16,14 @@
             Layout = "_PersonnelLayout";
             break;
     }
-} *@
+}
 
-@using Microsoft.AspNetCore.Identity
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
-@using CAPSTONE_TEAM01_2024.Utilities
+
+@* @inject IHttpContextAccessor HttpContextAccessor
+
 @{
-    var user = SignInManager.Context.User;
-    var roles = UserManager.GetRolesAsync(UserManager.GetUserAsync(user).Result).Result;
+    var rolesString = HttpContextAccessor.HttpContext.Session.GetString("Roles");
+    var roles = rolesString?.Split(',') ?? new string[0];
 
     if (roles.Contains("Cố Vấn") || roles.Contains("Khoa"))
     {
@@ -38,6 +33,4 @@
     {
         Layout = "_StudentLayout";
     }
-
-}
-
+} *@
