--- a/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml.css
@@ -50,7 +50,7 @@
     position: sticky;
     top: 0;
     font-size: 1.1rem;
-    border-radius: 0 10px 10px 0;
+    border-radius:  0;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     margin-right: 0;
     overflow-y: auto;
