StudentList CRUD done

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -125,6 +125,13 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a class="dropdown-item" href="/Categories/StudentList" id="linkClassList" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-person-lines-fill"></i> Danh Sách Sinh Viên
+                                    </a>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" href="/Categories/SemesterPlan" id="linkSemesterPlan" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
